build(frontend): TypeScript 5.9, and the type check wired back into the build
Stage 3 was meant to start with React 18. It starts here instead, because React 18
ships changed @types/react - React.FC no longer implies children - and that produces
type errors across the codebase. Doing that without a working type check would mean
not seeing them. This is also the repair of what stage 2 broke.

The premise held exactly. tsc 4.7.3 failed with 88 errors, every one of them TS1xxx -
syntax, not typing - inside node_modules/i18next/typescript/t.d.ts. Line 298 uses const
type parameters, a TypeScript 5.0 feature, so the compiler could not read the file and
gave up before reaching src/. Under 5.9.3 there are none.

Behind it sat 34 real errors in src/, none of them regressions - they had been
invisible for as long as the check had been broken.

Two were TS2872, a check new in TypeScript 5: `{ ...x } || {}` in Teams.tsx and
Vendors.tsx. An object literal is always truthy, so the fallback was dead. In Teams.tsx
notably so, since the line above already calls currentTeam.users.map() and would have
thrown on null long before. A guard that never guarded.

Twenty were readonly `as const` arrays assigned to mutable types in Workflows/index.tsx,
sitting under a // @ts-ignore that was one line too high and therefore suppressed
nothing. They are only ever read - indexed and mapped - so readonly is the honest type.

The remaining twelve shared one root: type-fest's Paths<T> cannot express traversal
into a collection, so "customFieldValues.value" is rejected while the backend's
SpecificationBuilder accepts exactly that path, and Paths<T> also yields number for
array indices where FilterField.field is string. Rather than suppressing at eight call
sites, models/owns/page.ts now names the thing: QueryPath<T> keeps the Paths
suggestions visible via `string & {}` while allowing the deeper paths. That also made a
second @ts-ignore in overall.ts unnecessary - it had been covering the same root.
